fix responsiveness of landing page by changing background image size on mobile screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -281,8 +281,13 @@ body {
   }
 
   .testimonials-image {
-    height: 60vh;
+    height: 120vh;
     width: auto;
+  }
+
+  .contact img {
+    width: 80%;
+    height: auto;
   }
 }
 /* Slightly larger container on xl screens */
